# AI4ALL-Ignite24-Group2-FacialRecognition

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: svn_v2.ipynb
